# mimicopy

./: Makefile  pyproject.toml
mimicopy/domain/: wave_generator.py
