[tool.poetry]
name = "mimicopy"
version = "0.1.0"
description = ""
authors = ["kz <kz@kz.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
japanize-matplotlib = "^1.1.3"
structlog = "^21.5.0"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
